force-app/main/default/objects/pse__Create_Project_Personal__c/pse__Create_Project_Personal__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Settings related to creating a project from an opportunity or template. Predominately, these settings affect the Create Project and Create Project from Template UI screens that combine information from multiple objects.</description>
    <label>Create Project Personal</label>
</CustomObject>