force-app/main/default/objects/pse__Create_Project_Personal__c/fields/pse__Opp_and_Template_Proj_Budget_Fieldset__c.field-meta.xml
<CustomField>
    <fullName>pse__Opp_and_Template_Proj_Budget_Fieldset__c</fullName>
    <defaultValue>&apos;CreateProjectFromOppAndTempBudgetColumns&apos;</defaultValue>
    <description>The API name of a field set used by the Budget object. Fields in this set define the editable fields in the Budget Details section of the Create Project from Template and Create Project from Opportunity pages. The default value is CreateProjectFromOppAndTempBudgetColumns.</description>
    <inlineHelpText>API name of a field set used by the Budget object. Fields in this set define the editable fields in the Budget Details section of the Create Project from Template and Create Project from Opportunity pages.</inlineHelpText>
    <label>Opp and Template Proj Budget Fieldset</label>
    <length>100</length>
    <type>Text</type>
</CustomField>