force-app/main/default/objects/pse__Create_Project_Personal__c/fields/pse__Opp_and_Template_Proj_Fieldset__c.field-meta.xml
<CustomField>
    <fullName>pse__Opp_and_Template_Proj_Fieldset__c</fullName>
    <defaultValue>&apos;createProjectFromOppAndTempProjColumns&apos;</defaultValue>
    <description>The API name of a field set used by the Project object. Fields in this set define the editable fields in the Project Details section of the Create Project from Template and Create Project from Opportunity pages. The default value is createProjectFromOppAndTempProjColumns.</description>
    <inlineHelpText>API name of a field set used by the Project object. Fields in this set define the editable fields in the Project Details section of the Create Project from Template and Create Project from Opportunity pages.</inlineHelpText>
    <label>Opp and Template Proj Fieldset</label>
    <length>100</length>
    <type>Text</type>
</CustomField>