force-app/main/default/objects/pse__Create_Project_Personal__c/fields/pse__Opp_RR_Fieldset__c.field-meta.xml
<CustomField>
    <fullName>pse__Opp_RR_Fieldset__c</fullName>
    <defaultValue>&apos;CreateProjectOpportunityRRColumns&apos;</defaultValue>
    <description>The API name of a field set used by the Resource Request object. Fields in this set define the columns in Resource Request Mappings from Opportunity on the Create Project from Template page. The default value is CreateProjectOpportunityRRColumns.</description>
    <inlineHelpText>API name of a field set used by the Resource Request object. Fields in this set define the columns in Resource Request Mappings from Opportunity on the Create Project from Template page.</inlineHelpText>
    <label>Opp RR Fieldset</label>
    <length>100</length>
    <type>Text</type>
</CustomField>