force-app/main/default/objects/pse__Create_Project_Personal__c/fields/pse__Template_Proj_Alt_Copy_Assign_Fieldset__c.field-meta.xml
<CustomField>
    <fullName>pse__Template_Proj_Alt_Copy_Assign_Fieldset__c</fullName>
    <defaultValue>&apos;CreateProjFromTempAltCopyAssignmentField&apos;</defaultValue>
    <description>The API name of a field set used by the Assignment object. Fields in this set define the assignment fields (if associated assignments exist) to copy from the template to the new project. These fields are not shown on the Create Project from Template page. The default value is CreateProjFromTempAltCopyAssignmentField.</description>
    <inlineHelpText>API name of a field set used by the Assignment object. Fields in this set define the assignment fields (if associated assignments exist) to copy from the template to the new project. These fields are not shown on the Create Project from Template page.</inlineHelpText>
    <label>Template Proj Alt Copy Assign Fieldset</label>
    <length>100</length>
    <type>Text</type>
</CustomField>