force-app/main/default/objects/pse__Create_Project_Personal__c/fields/pse__Template_Proj_Alt_Copy_Phase_Fieldset__c.field-meta.xml
<CustomField>
    <fullName>pse__Template_Proj_Alt_Copy_Phase_Fieldset__c</fullName>
    <defaultValue>&apos;CreateProjFromTempAltCopyProjPhaseFields&apos;</defaultValue>
    <description>The API name of a field set used by the Project Phase object. Fields in this set define the project phase fields (if associated project phases exist) to copy from template to new project. These fields are not shown on the Create Project from Template page. The default value is CreateProjFromTempAltCopyProjPhaseFields.</description>
    <inlineHelpText>API name of a field set used by the Project Phase object. Fields in this set define the project phase fields (if associated project phases exist) to copy from template to new project. These fields are not shown on the Create Project from Template page.</inlineHelpText>
    <label>Template Proj Alt Copy Phase Fieldset</label>
    <length>100</length>
    <type>Text</type>
</CustomField>