force-app/main/default/objects/pse__Create_Project_Personal__c/fields/pse__Template_Proj_Alt_Copy_RR_Fieldset__c.field-meta.xml
<CustomField>
    <fullName>pse__Template_Proj_Alt_Copy_RR_Fieldset__c</fullName>
    <defaultValue>&apos;CreateProjFromTempAltCopyProjRRFields&apos;</defaultValue>
    <description>The API name of a field set used by the Resource Request object. Fields in this set define the resource request fields (if associated requests exist) to copy from template to new project. These fields are not shown on the Create Project from Template page. The default value is CreateProjFromTempAltCopyProjRRFields.</description>
    <inlineHelpText>API name of a field set used by the Resource Request object. Fields in this set define the resource request fields (if associated requests exist) to copy from template to new project. These fields are not shown on the Create Project from Template page.</inlineHelpText>
    <label>Template Proj Alt Copy RR Fieldset</label>
    <length>100</length>
    <type>Text</type>
</CustomField>