force-app/main/default/objects/pse__Create_Project_Personal__c/fields/pse__Template_Proj_Copy_PTA_Fieldset__c.field-meta.xml
<CustomField>
    <fullName>pse__Template_Proj_Copy_PTA_Fieldset__c</fullName>
    <defaultValue>&apos;CreateProjectFromTemplateCopyPTAFields&apos;</defaultValue>
    <description>The API name of a field set used by the Project Task Assignment object. Fields in this set define additional project task assignment fields to copy from the template to the new project. These fields are not shown on the Create Project from Template page. The default value is CreateProjectFromTemplateCopyPTAFields.</description>
    <inlineHelpText>API name of a field set used by the Project Task Assignment object. Fields in this set define additional project task assignment fields to copy from the template to the new project. These fields are not shown on the Create Project from Template page.</inlineHelpText>
    <label>Template Proj Copy PTA Fieldset</label>
    <length>100</length>
    <type>Text</type>
</CustomField>