force-app/main/default/objects/pse__Create_Project_Personal__c/fields/pse__Template_Proj_Location_Fieldset__c.field-meta.xml
<CustomField>
    <fullName>pse__Template_Proj_Location_Fieldset__c</fullName>
    <defaultValue>&apos;CreateProjFromTemplateLocationColumns&apos;</defaultValue>
    <description>The API name of a field set used by the Project Location object. Fields in this field set define the editable fields in the Project Locations section of the Create Project from Template page. The default value is CreateProjFromTemplateLocationColumns.</description>
    <inlineHelpText>API name of a field set used by the Project Location object. Fields in this field set define the editable fields in the Project Locations section of the Create Project from Template page.</inlineHelpText>
    <label>Template Proj Location Fieldset</label>
    <length>100</length>
    <type>Text</type>
</CustomField>