force-app/main/default/objects/pse__Create_Project_Personal__c/fields/pse__Template_Proj_MS_Fieldset__c.field-meta.xml
<CustomField>
    <fullName>pse__Template_Proj_MS_Fieldset__c</fullName>
    <defaultValue>&apos;CreateProjFromTemplateMilestoneColumns&apos;</defaultValue>
    <description>The API name of a field set used by the Milestone object. Fields in this field set define the editable fields in the Milestones section of the Create Project from Template page. The default value is CreateProjFromTemplateMilestoneColumns.</description>
    <inlineHelpText>API name of a field set used by the Milestone object. Fields in this field set define the editable fields in the Milestones section of the Create Project from Template page.</inlineHelpText>
    <label>Template Proj MS Fieldset</label>
    <length>100</length>
    <type>Text</type>
</CustomField>