force-app/main/default/objects/pse__Create_Project_Personal__c/fields/pse__Template_Proj_Phase_Fieldset__c.field-meta.xml
<CustomField>
    <fullName>pse__Template_Proj_Phase_Fieldset__c</fullName>
    <defaultValue>&apos;CreateProjFromTemplatePhaseColumns&apos;</defaultValue>
    <description>The API name of a field set used by the Project Phase object. Fields in this field set define editable fields in the Project Phases section of the Create Project from Template page. The default value is CreateProjFromTemplatePhaseColumns.</description>
    <inlineHelpText>API name of a field set used by the Project Phase object. Fields in this field set define editable fields in the Project Phases section of the Create Project from Template page.</inlineHelpText>
    <label>Template Proj Phase Fieldset</label>
    <length>100</length>
    <type>Text</type>
</CustomField>