force-app/main/default/objects/pse__Create_Project_Personal__c/fields/pse__Template_Proj_Task_Fieldset__c.field-meta.xml
<CustomField>
    <fullName>pse__Template_Proj_Task_Fieldset__c</fullName>
    <defaultValue>&apos;CreateProjFromTemplateTasksColumns&apos;</defaultValue>
    <description>The API name of a field set used by the Project Task object. Fields in this field set define the editable fields in the Project Tasks section of the Create Project from Template page. The default value is CreateProjFromTemplateTasksColumns.</description>
    <inlineHelpText>API name of a field set used by the Project Task object. Fields in this field set define the editable fields in the Project Tasks section of the Create Project from Template page.</inlineHelpText>
    <label>Template Proj Task Fieldset</label>
    <length>100</length>
    <type>Text</type>
</CustomField>